--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,12 +33,17 @@
         "data-adapter.ts",
         "database.ts",
         "server.ts",
+        "typings/backbone/backbone-global.d.ts",
+        "typings/backbone/backbone.d.ts",
         "typings/bluebird/bluebird.d.ts",
         "typings/handlebars/handlebars.d.ts",
         "typings/hapi/hapi.d.ts",
+        "typings/jquery/jquery.d.ts",
         "typings/node/node.d.ts",
+        "typings/observe-js/observe-js.d.ts",
         "typings/socket.io/socket.io.d.ts",
-        "typings/tsd.d.ts"
+        "typings/tsd.d.ts",
+        "typings/underscore/underscore.d.ts"
     ],
     "exclude": []
 }
