--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,12 +20,6 @@
         "!node_modules/**"
     ],
     "files": [
-        "client/index.ts",
-        "client/item-view.ts",
-        "client/observer-collection-view.ts",
-        "client/observer-view.ts",
-        "client/support.ts",
-        "client/view.ts",
         "cust_typings/cradle/cradle.d.ts",
         "cust_typings/database/database.d.ts",
         "cust_typings/diffsync-couchdb/diffsync-couchdb.d.ts",
@@ -41,6 +35,7 @@
         "typings/jquery/jquery.d.ts",
         "typings/node/node.d.ts",
         "typings/observe-js/observe-js.d.ts",
+        "typings/socket.io-client/socket.io-client.d.ts",
         "typings/socket.io/socket.io.d.ts",
         "typings/tsd.d.ts",
         "typings/underscore/underscore.d.ts"
